更新JVM简单调优及一些工具的使用